kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ams-auto-sdb
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 3000
  selector:
    ams-pro: auto-sdb
