kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auto-sdb
  labels:
    name: auto-sdb
spec:
  tls:
    - hosts:
        - auto-sdb.aaronschweig.dev
      secretName: wildcard-aaronschweig-dev
  rules:
  - host: auto-sdb.aaronschweig.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ams-auto-sdb
            port: 
              name: web
